--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,11 @@
           color: #333;
           list-style-type: square; }
 
+@media (max-width: 768px) {
+  #about-text {
+    padding-left: 0 !important;
+    padding-right: 0 !important; } }
+
 #section4 {
   margin-top: 200px; }
   #section4 .contact-container .contact-info h4 {
